<resources>
    <string name="app_name">Xiyouji</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- tab text -->
    <string name="main_home">首页</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>

    <!-- home page text -->
    <string name="main_welcome_text">天气不错，给您的爱车洗洗澡吧？</string>
    <string name="main_weather_text">晴</string>
    <string name="main_date_text">4月15日 13:34</string>
    <string name="main_temperature_text">21C</string>
    <string name="main_washing_hint_text">洗车指数：</string>
    <string name="main_washing_hint_value_text">适宜</string>

    <!-- action bar text -->
    <string name="main_actionbar_title">洗游记</string>
    <string name="wantwashing_actionbar_title">我要洗车</string>
    <string name="waitwashing_actionbar_cancel">取消订单</string>
    <string name="waitwashing_actionbar_title">立即清洗</string>
    <string name="carinfo_actionbar_right">保存</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- common bar text -->
    <string name="common_bar_phone">电话号码</string>
    <string name="common_bar_carInfo">车辆信息</string>
    <string name="common_bar_carPos">车辆位置</string>
    <string name="common_bar_sure">确定</string>
    <string name="common_bar_wash_immediately">立即清洗</string>
    <string name="common_bar_wash_order">预约清洗</string>
    <string name="common_bar_discount">优惠劵</string>
    <string name="common_bar_discount_hint">暂无可用优惠劵</string>
    <string name="common_bar_xiaoer_number">小二编号</string>
    <string name="common_bar_wash_outside">车外清洗</string>
    <string name="common_bar_wash_inout">车内+车外清洗</string>
    <!-- carinformation text-->
    <string name="car_information">车辆信息</string>
    <string name="car_number">请输入车牌号</string>
    <string name="car_icon">请选择车的品牌</string>
    <string name="car_color">请选择车的颜色</string>
    <string name="car_usual">常用车辆</string>
    <string name="car_location">车辆位置</string>
    <string name="location_usual">常用位置</string>
    <!-- number_check text-->
    <string name="phone_check">验证手机</string>
    <string name="phone_number">手机号码</string>
    <string name="code_identify">验证码</string>
    <string name="submit_text">提交</string>
    <string name="get_identify">获取验证码</string>
    <!-- pay and check text -->
    <string name="pay_check_yuan">元</string>
    <string name="pay_check_carinfo_example">浙A 88888</string>
    <string name="pay_check_cartype_example">奥迪A6L</string>
    <string name="pay_check_carcolor_example">黑色</string>
    <string name="pay_check_washing_type_example">车外清洗</string>
    <string name="pay_check_payment">支付方式</string>
    <string name="pay_check_pay_weixin">微信支付</string>
    <string name="pay_check_pay_zhifubao">支付宝支付</string>
    <string name="pay_check_sure">确定支付</string>

    <!-- xiaoer info text -->
    <string name="xiaoer_info_title">小二信息</string>
    <string name="xiaoer_info_latest">最近清洗</string>
    
    <!-- order fragment text -->
    <string name="order_ing">进行中</string>
    <string name="order_history">历史订单</string>
    
    <!-- mine fragment text -->
    <string name="mine_recharge">充值</string>
    <string name="mine_discount">优惠劵</string>
    <string name="mine_query">违章查询</string>
    <string name="mine_address">常用地址</string>
    <string name="mine_car">我的车辆</string>
    <string name="mine_insurance">车辆保险</string>
    <string name="mine_xiaoer">专属小二</string>
    <string name="mine_contact">联系我们</string>
    <string name="mine_quit_login">退出登录</string>
    <string name="mine_left_money">我的余额</string>
    <string name="mine_recharge_text">充值</string>
    <string name="mine_recharge_300">300元</string>
    <string name="mine_recharge_800">800元</string>
    <string name="mine_recharge_1500">1500元</string>
    <string name="mine_recharge_immediate">立即充值</string>
    <string name="mine_payment_way">请选择支付方式</string>
    
    <string name="discount_price">￥30</string>
    <string name="discount_discription">您可在下单过程中选择要使用的优惠劵</string>
    <string name="discount_change">兑换</string>
    <string name="discount_hint">输入优惠劵兑换码</string>
    <string name="discount_list_hint">优惠劵</string>
    <string name="discount_list_due">有效期至</string>

    <string name="address_example">杭州市西湖区行政服务中心</string>
</resources>
