<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/actionbar_main3"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_price"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:textColor="@color/orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/discount_discription"
            android:textSize="16dp"/>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            
            <EditText
                android:paddingLeft="20dp"
                android:id="@+id/discount_id"
                android:hint="@string/discount_hint"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@+id/change_button"
                android:layout_marginRight="10dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/change_button"
                android:layout_width="80dp"
                android:gravity="center"
                android:layout_height="fill_parent"
                android:background="@color/main_theme_tab_color"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/discount_change"/>

            </RelativeLayout>

        <ListView
            android:id="@+id/discount_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            </ListView>

    </LinearLayout>
</LinearLayout>