<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_price"
        android:layout_marginLeft="10dp"
        android:textSize="30dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_list_hint"
            android:textSize="18dp"/>
        
        <TextView
            android:id="@+id/due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:text="@string/discount_list_due"/>

        <TextView
            android:id="@+id/due_date"
            android:layout_toRightOf="@id/due"
            android:layout_marginLeft="5dp"
            android:layout_alignBottom="@+id/due"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015-03-31"/>
        </RelativeLayout>

</LinearLayout>